Update README with project details and setup instructions
Expanded project description and added features and instructions.